--- a/templates/git/file.html
+++ b/templates/git/file.html
@@ -3,15 +3,19 @@
 {% load sass_tags %}
 
 <html>
-	<head>
-		<title>Fontis - git</title>
-		<link href="{% sass_src 'main.scss' %}" rel="stylesheet" type="text/css" />
-	</head>
-	<body>
-		<div class="content source">
-		<pre class="lines">{{ lines }}</pre>
-		{{ content|safe }}
-		</div>
-	</body>
+  <head>
+    <title>Fontis - git</title>
+    <link href="{% sass_src 'main.scss' %}" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div class="content">
+      <div class="lines">
+	{% for i in lines %}
+	  <a href="#line-{{ i }}" class="number">{{i}}</a>
+	{% endfor %}
+      </div>
+      <div class="border"></div>
+      {{ content|safe }}
+    </div>
+  </body>
 </html>
-
