--- a/templates/git/file.html
+++ b/templates/git/file.html
@@ -8,14 +8,77 @@
     <link href="{% sass_src 'main.scss' %}" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="content">
-      <div class="lines">
-	{% for i in lines %}
-	  <a href="#line-{{ i }}" class="number">{{i}}</a>
-	{% endfor %}
+    	<div class="toppart">
+	  <div class="path">
+	    {% for dir in filedirs %}
+	      <a href="{{ dir.url }}">{{ dir.name }}</a>
+	      <span class="sep">/</span>
+	    {% endfor %}
+	    <span>{{ filename }}</span>  
+	  </div>
+	  <!--<button onclick="document.documentElement.scrollTo({ top: 0, behavior: 'smooth' })">TOP</button>-->
+	</div>
+	<div class="commit">
+	  <div class="human-info">
+	    <a href="#">{{ commit.message }}</a>
+	    <span>{{ commit.author }} authored {{ commit.time|timesince }} ago</span>
+	  </div>
+	  <div class="machine-info">
+	    <div class="rounded-border">
+	    <span>{{ commit.hash }}</span><button onclick="alert('todo')">
+	      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+		<title>Copy hash</title>
+		<path stroke-linecap="round" stroke-linejoin="round" d="M8.25 7.5V6.108c0-1.135.845-2.098 1.976-2.192.373-.03.748-.057 1.123-.08M15.75 18H18a2.25 2.25 0 0 0 2.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 0 0-1.123-.08M15.75 18.75v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5A3.375 3.375 0 0 0 6.375 7.5H5.25m11.9-3.664A2.251 2.251 0 0 0 15 2.25h-1.5a2.251 2.251 0 0 0-2.15 1.586m5.8 0c.065.21.1.433.1.664v.75h-6V4.5c0-.231.035-.454.1-.664M6.75 7.5H4.875c-.621 0-1.125.504-1.125 1.125v12c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V16.5a9 9 0 0 0-9-9Z" />
+	      </svg>
+	    </button></div>
+	    <a class="history" href="">
+	      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+		<path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+	      </svg>
+	      History
+	    </a>
+	  </div>
+	</div>
+    <div class="file">
+	<div class="bottompart">
+	  <div class="info">
+	    <div class="tab rounded-border">
+	      <a href="" class="selected rounded-border">Code</a>
+	      <a href="#">Blame</a>
+	    </div>
+	    <span class="filesize">{{ lines|last}} lines · {{ filesize|filesizeformat }}</span>
+	  </div>
+	  <div class="actions rounded-border">
+	    <button onclick="alert('todo')">
+	      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+		<title>Copy document</title>
+		<path stroke-linecap="round" stroke-linejoin="round" d="M8.25 7.5V6.108c0-1.135.845-2.098 1.976-2.192.373-.03.748-.057 1.123-.08M15.75 18H18a2.25 2.25 0 0 0 2.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 0 0-1.123-.08M15.75 18.75v-1.875a3.375 3.375 0 0 0-3.375-3.375h-1.5a1.125 1.125 0 0 1-1.125-1.125v-1.5A3.375 3.375 0 0 0 6.375 7.5H5.25m11.9-3.664A2.251 2.251 0 0 0 15 2.25h-1.5a2.251 2.251 0 0 0-2.15 1.586m5.8 0c.065.21.1.433.1.664v.75h-6V4.5c0-.231.035-.454.1-.664M6.75 7.5H4.875c-.621 0-1.125.504-1.125 1.125v12c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V16.5a9 9 0 0 0-9-9Z" />
+	      </svg>
+	    </button>
+	    <button onclick="alert('todo')">
+	      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+		<title>Raw document</title>
+		<path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+	      </svg>
+	    </button>
+	    <button onclick="alert('todo')">
+	    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+	      <title>Download</title>
+	      <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+	    </svg>
+	    </button>
+	  </div>
+	</div>
+
+      <div class="content">
+	<div class="lines">
+	  {% for i in lines %}
+	    <a href="#line-{{ i }}" class="number">{{i}}</a>
+	  {% endfor %}
+	</div>
+	<div class="border"></div>
+	{{ content|safe }}
       </div>
-      <div class="border"></div>
-      {{ content|safe }}
     </div>
   </body>
 </html>
